# hyperterm

./: .gitignore  CLAUDE.md  LICENSE  README.md  border_example.py  demo.py  demo_output.html  main.py  pyproject.toml
hyperterm/: __init__.py  colors.py  grid.py  style.py  types.py
hyperterm/renderers/: __init__.py  base.py  html.py  terminal.py
tests/: __init__.py  conftest.py  test_border.py  test_colors.py  test_grid.py  test_html_renderer.py  test_integration.py  test_style.py  test_terminal_renderer.py  test_title.py
