[project]
name = "hyperterm"
version = "0.1.0"
description = "A type-safe terminal grid rendering library with ANSI and HTML output"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=hyperterm",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.pyright]
include = ["hyperterm", "tests"]
exclude = ["**/__pycache__", ".venv", "proto.py"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
pythonVersion = "3.9"
